--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ VITE_SITE_APPLE_LOGO = "/images/logo/apple-touch-icon.png" # Apple 端图标
 
 # 简介文本
 VITE_DESC_HELLO = "Hello World !"
-VITE_DESC_TEXT = "一个建立于 21 世纪的小站，存活于互联网的边缘"
+VITE_DESC_TEXT = "一个建立于 21 世纪的小站，遨游在游戏世界"
 VITE_DESC_HELLO_OTHER = "Oops !"
 VITE_DESC_TEXT_OTHER = "哎呀，这都被你发现了（ 再点击一次可关闭 ）"
 
@@ -31,7 +31,7 @@ VITE_WEATHER_KEY = ""
 # 建站日期
 ## 若不需要，请设为空即可
 ## 请按照 YYYY-MM-DD 格式填写或者仅填写年份 YYYY
-VITE_SITE_START = "2020-10-24"
+VITE_SITE_START = "2024-07-22"
 
 # ICP 备案号
 ## 若不需要，请设为空即可
